--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.1",
+    "@react-native-firebase/auth": "^18.7.1",
+    "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
